# nailsize-ai

./: .env.example  .gitignore  .prettierignore  AGENTS.md  DESIGN.md  PRD.md  README.md  package-lock.json  package.json  playwright.compat.config.ts  playwright.config.ts  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  deployment-smoke.yml  model-tooling.yml  visual-baselines.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  captureConfig.ts  guidedSizing.test.ts  guidedSizing.ts  imagePreparation.test.ts  imagePreparation.ts  main.tsx  session.test.ts  session.ts
docs/: automatic-model-provenance.md  calibration-and-measurement.md  client-certification.md  data-protocol.md  decisions.md  deployment.md  goal-evidence.md  image-decoder-provenance.md  observability.md  privacy-and-threat-model.md  release-readiness.md
docs/evidence/: github-environment-audit-2026-07-12.json
infra/bootstrap/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/cloud-run/: service.template.yaml
infra/environments/: development.env.example  production.env.example  staging.env.example
infra/observability/: README.md  alerts.tf  budget.tf  dashboard.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/platform/: README.md  main.tf  outputs.tf  variables.tf
ml/: README.md  pyproject.toml  ruff.toml
ml/annotations/: nail-annotation.schema.json
ml/nailsize_ml/: __init__.py  annotation_quality.py  annotation_report.py  benchmark.py  dataset.py  dataset_provenance.py  evaluation.py  feasibility.py  holdout_lock.py  model_card.py  modeling.py  operational_validation.py  release_bundle.py  reporting.py  segmentation_report.py  selected_export.py  size_calibration.py  training.py
ml/tests/: test_annotation_quality.py  test_annotation_report.py  test_benchmark.py  test_dataset.py  test_dataset_provenance.py  test_evaluation.py  test_feasibility.py  test_holdout_lock.py  test_model_card.py  test_modeling.py  test_operational_validation.py  test_release_bundle.py  test_reporting.py  test_segmentation_report.py  test_size_calibration.py  test_training.py
outputs/: plan.md  task.md
scripts/: deployment-scripts.test.mjs  guided-artifact.mjs  public-deployment-convergence.mjs  public-deployment-convergence.test.mjs  record-vercel-deployment.mjs  vercel-api-contract.mjs  vercel-curl-fetch.mjs  vercel-curl-fetch.test.mjs  vercel-deployment-files.mjs  vercel-protected-fetch.mjs  verify-guided-build.mjs  verify-vercel-api.mjs  verify-vercel-files.mjs  verify-vercel-inspect.mjs  verify-vercel-pull.mjs  verify-web-deployment.mjs
services/inference/: .dockerignore  Dockerfile  Dockerfile.vercel  pyproject.toml
services/inference/app/: __init__.py  calibration.py  config.py  hand_geometry.py  hand_landmarks.py  image_io.py  logging_config.py  main.py  measurement.py  pipeline.py  projection.py  quality.py  request_limits.py  runtime.py  runtime_benchmark.py  schemas.py  segmentation.py  size_chart.py
services/inference/models/: .gitignore  README.md
services/inference/scripts/: __init__.py  audit_github_environments.py  audit_vercel_projects.py  client_certification.py  deployment_smoke.py  export_openapi.py  fetch_hand_landmarker.py  generate_preview_contract_model.py  load_test.py  release_readiness.py  smoke_hand_landmarker.py  verify_cloud_run_benchmark.py  verify_image_promotion.py  verify_privacy_release_boundary.py  verify_runtime_model.py  verify_staging_promotion.py  verify_vercel_deployment.py
services/inference/tests/: generate_container_contract_model.py  generate_golden_quality_fixtures.py  test_api.py  test_calibration.py  test_client_certification.py  test_config.py  test_deployment_config.py  test_deployment_smoke.py  test_ephemeral_runtime.py  test_github_environment_audit.py  test_golden_quality.py  test_hand_geometry.py  test_hand_landmarks.py  test_image_io.py  test_load_test.py  test_logging.py  test_measurement.py  test_pipeline.py  test_privacy_boundary.py  test_projection.py  test_quality.py  test_release_readiness.py  test_repository_security.py  test_request_limits.py  test_runtime.py  test_runtime_benchmark.py  test_schemas.py  test_segmentation.py  test_size_calibration_contract.py  test_size_chart.py  test_vercel_project_audit.py  test_verify_cloud_run_benchmark.py  test_verify_image_promotion.py  test_verify_privacy_release_boundary.py  test_verify_runtime_model.py  test_verify_staging_promotion.py  test_verify_vercel_deployment.py
services/inference/tests/fixtures/golden_quality/: manifest.json
tests/e2e/: core-flow.spec.ts
(+38 files in other folders)
