[project]
name = "nailsize-ml-tooling"
version = "0.1.0"
description = "Dataset integrity and annotation agreement tooling for NailSize AI"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4.25,<5", "numpy>=2.2,<3"]

[project.optional-dependencies]
training = [
  "onnx>=1.22,<2",
  "onnxruntime>=1.27,<2",
  "onnxscript==0.7.1",
  "pillow>=11,<12",
  "torch==2.13.0",
  "torchvision==0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nailsize_ml"]
