[project]
name = "nailsize-ml-tooling"
version = "0.1.0"
description = "Dataset integrity and annotation agreement tooling for NailSize AI"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4.25,<5", "numpy>=2.2,<3"]

[project.optional-dependencies]
training = [
  "onnx>=1.22,<2",
  "onnxruntime>=1.27,<2",
  "onnxscript==0.7.1",
  "pillow>=11,<12",
  "torch==2.13.0",
  "torchvision==0.28.0",
]

[project.scripts]
nailsize-annotation-report = "nailsize_ml.annotation_report:main"
nailsize-accuracy-report = "nailsize_ml.reporting:main"
nailsize-benchmark = "nailsize_ml.benchmark:main"
nailsize-dataset-provenance-report = "nailsize_ml.dataset_provenance:main"
nailsize-export-checkpoint = "nailsize_ml.selected_export:main"
nailsize-model-card = "nailsize_ml.model_card:main"
nailsize-operational-report = "nailsize_ml.operational_validation:main"
nailsize-release-bundle = "nailsize_ml.release_bundle:main"
nailsize-size-calibration-report = "nailsize_ml.size_calibration:main"
nailsize-train = "nailsize_ml.training:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nailsize_ml"]
