[project]
name = "nailsize-inference"
version = "0.1.0"
description = "Privacy-preserving calibrated nail measurement API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "numpy>=2.2,<3",
  "onnxruntime>=1.27,<2",
  "opencv-python-headless>=4.11,<5",
  "pillow>=11,<12",
  "pillow-heif>=1.1,<2",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "starlette>=1.3.1,<1.4",
  "uvicorn[standard]>=0.35,<1"
]

[project.optional-dependencies]
landmarks = ["mediapipe==0.10.35"]
dev = [
  "onnx>=1.19,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
